# lab_2_3

./: CMakeLists.txt
lab/: CMakeLists.txt  Student.cpp  Student.hpp  lab2_3.cpp
university/: CMakeLists.txt  university.cpp  university.hpp
